--- a/firmware/smart-tomato-garden/platformio.ini
+++ b/firmware/smart-tomato-garden/platformio.ini
@@ -3,16 +3,29 @@ platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
 monitor_speed = 115200
+
+monitor_port = COM3
+upload_port = COM3
+monitor_dtr = 0
+monitor_rts = 0
+
+board_build.arduino.memory_type = qio_opi
+
 board_build.partitions = partitions.csv
 extra_scripts = pre:tools/pack_webui.py
+
 lib_deps =
   bblanchon/ArduinoJson@^7.0.4
-  me-no-dev/ESP Async WebServer@^1.2.3
-  me-no-dev/AsyncTCP@^1.1.1
+  https://github.com/me-no-dev/ESPAsyncWebServer.git
+  https://github.com/me-no-dev/AsyncTCP.git
   marvinroger/AsyncMqttClient@^0.9.0
   beegee-tokyo/DHT sensor library for ESPx@^1.19.0
+
 build_flags =
   -DCORE_DEBUG_LEVEL=0
   -DARDUINOJSON_USE_LONG_LONG=1
   -DASYNCWEBSERVER_REGEX=1
   -DBOARD_HAS_PSRAM
+  -DARDUINO_USB_MODE=1
+  -DARDUINO_USB_CDC_ON_BOOT=1
+
