--- a/ml/pyproject.toml
+++ b/ml/pyproject.toml
@@ -50,3 +50,19 @@ packages = ["src/garden_ml"]
 
 [tool.ruff]
 line-length = 120
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+norecursedirs = [
+  "dataset",
+  "datasets",
+  "artifacts",
+  "mlruns",
+  "reports",
+  ".git",
+  ".venv",
+  "build",
+  "dist"
+]
+addopts = "-ra --durations=20"
