--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,13 @@ services:
     environment:
       - GML_LOG_LEVEL=INFO
       - GML_SAVE_DEBUG=0
-      - GML_ARTIFACTS_DIR=/app/ml/artifacts/model_registry/v0001
+      - GML_ARTIFACTS_DIR=/app/ml/artifacts/model_registry/v0002
       - GML_HOST=0.0.0.0
       - GML_PORT=5000
     ports:
       - "5000:5000"
     volumes:
+      # API precisa ver os artifacts treinados
       - ./ml/artifacts/model_registry:/app/ml/artifacts/model_registry
     restart: unless-stopped
     healthcheck:
@@ -27,13 +28,16 @@ services:
       context: .
       dockerfile: ml/Dockerfile
     platform: linux/amd64
-    working_dir: /app
-    entrypoint: ["bash", "-lc"]
-    command: "python --version"
+    working_dir: /app/ml
     volumes:
+      # projeto inteiro para dev (permite rodar testes, CLI etc.)
       - ./:/app
+      # artifacts persistem no host e são compartilhados com a API
       - ./ml/artifacts/model_registry:/app/ml/artifacts/model_registry
-      - ./tools/dataset:/app/dataset
+      # dataset vive em tools/ e aparece como /app/ml/dataset no container
+      - ./tools/dataset:/app/ml/dataset
     environment:
       - GML_LOG_LEVEL=INFO
       - PYTHONUNBUFFERED=1
+      - GML_MLFLOW_TRACKING_URI=file:/app/ml/mlruns
+      - GML_MLFLOW_EXPERIMENT=smart-tomato-garden
