--- a/ml/Dockerfile
+++ b/ml/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.11-slim
 
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
+ENV DEBIAN_FRONTEND=noninteractive
 
 WORKDIR /app
 
@@ -13,6 +14,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   libglib2.0-0 \
   && rm -rf /var/lib/apt/lists/*
 
+# Código do pacote ML dentro da imagem (para build reproducível)
 COPY ml/ ./ml/
 
 RUN pip install --no-cache-dir -U pip \
