--- a/firmware/smart-tomato-garden/platformio.ini
+++ b/firmware/smart-tomato-garden/platformio.ini
@@ -2,15 +2,19 @@
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
-monitor_speed = 115200
 
+monitor_speed = 115200
 monitor_port = COM3
 upload_port = COM3
 monitor_dtr = 0
 monitor_rts = 0
 
-board_build.arduino.memory_type = qio_opi
+; ajuda a decodificar backtrace automaticamente no monitor
+monitor_filters =
+  time
+  esp32_exception_decoder
 
+board_build.arduino.memory_type = qio_opi
 board_build.partitions = partitions.csv
 extra_scripts = pre:tools/pack_webui.py
 
@@ -28,4 +32,3 @@ build_flags =
   -DBOARD_HAS_PSRAM
   -DARDUINO_USB_MODE=1
   -DARDUINO_USB_CDC_ON_BOOT=1
-
