--- a/ml/pyproject.toml
+++ b/ml/pyproject.toml
@@ -10,28 +10,36 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
   "numpy>=1.24",
-  "pandas>=2.0",
   "scikit-learn>=1.3",
   "joblib>=1.3",
   "opencv-python-headless>=4.8",
   "Pillow>=10.0",
-  "mahotas>=1.4",
+  "scikit-image>=0.22",
+  "mahotas>=1.4,<1.5",
   "xgboost>=2.0",
   "tqdm>=4.66",
   "loguru>=0.7.2",
   "pydantic>=2.6",
   "pydantic-settings>=2.2",
-  "albumentations>=1.4.0",
-  "scikit-image>=0.22",
+  "albumentations>=1.4.0,<2.0.0",
   "flask>=3.0",
   "gunicorn>=21.2",
   "prometheus-client>=0.20",
   "requests>=2.32",
-  "mlflow>=2.12",
+  "psutil>=5.9",
 ]
 
 [project.optional-dependencies]
-dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.8"]
+reports = ["pandas>=2.0"]
+tracking = ["mlflow>=2.12"]
+dev = [
+  "pytest>=8.0",
+  "ruff>=0.6",
+  "mypy>=1.8",
+  "pytest-cov>=5.0",
+  "hypothesis>=6.0",
+  "pre-commit>=3.5",
+]
 dl = [
   "torch>=2.2",
   "torchvision>=0.17",
